=======
CHANGES
=======

------
0.2.0
------

Added dataframe index display in row header
Ability to reset index
Added hexbin plot
Added iris.data for tests
Fixes for subplots layout
Improved histogram plots

------
0.0.1
------

Ported old tkintertable code to Python3
Removed old extraneous TableModel code
Added PlotFrame class
Re-did table viewer application
No longer using Pmw widgets